kapua-k8s/templates/kapua-api-deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: kapua-api
  name: kapua-api
spec:
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: kapua-api
    spec:
      containers:
      - env:
        - name: commons.db.schema.update
          value: "true"
        image: 2.3.255.240:80/iot/kapua-api:0.3.1
        name: kapua-api
        ports:
        - containerPort: 8080
        resources: {}
      restartPolicy: Always
status: {}
