kapua-k8s/templates/kapua-broker-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert -f docker-compose.yml
    kompose.version: 1.13.0 (84fa826)
  creationTimestamp: null
  labels:
    io.kompose.service: kapua-broker
  name: broker
spec:
  ports:
  - name: "1883"
    port: 1883
    targetPort: 1883
  - name: "61614"
    port: 61614
    targetPort: 61614
  selector:
    io.kompose.service: kapua-broker
status:
  loadBalancer: {}
